# immich-local-app

./: .gitignore  .prettierignore  README.md  index.html  package.json  project-plan.md  tsconfig.json  vite.config.ts
.github/instructions/: cross-platform.instructions.md  frontend-architecture.instructions.md  local-first.instructions.md  logging.instructions.md  sync.instructions.md  tauri-clipboard.instructions.md
.github/prompts/: frontend-dev.md
.github/workflows/: release.yml
scripts/: set-version.mjs
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  util.rs
src-tauri/src/commands/: albums.rs  assets.rs  auth.rs  folders.rs  memories.rs  mod.rs  settings.rs  shell.rs  sync.rs
src-tauri/src/db/: schema.rs
src-tauri/src/services/: account_manager.rs  db.rs  immich_client.rs  mod.rs
src/api/: tauri.ts
src/hooks/: connectionContext.tsx  useAccounts.ts  useAlbumAssets.ts  useAlbums.ts  useAppUpdate.ts  useAssetDays.ts  useAssetFilters.ts  useAssetState.ts  useAssetWindow.ts  useAssets.ts  useCalendarAssets.ts  useConnection.ts  useFolderAssets.ts  useFolderPaths.ts  useMemories.ts  useScopedFilterOptions.ts  useSession.ts  useSettings.ts  useSortPreference.ts  useSyncStatus.ts
src/i18n/: index.tsx
src/pages/: AlbumsPage.tsx  CalendarPage.tsx  DeletedPage.tsx  FavoritesPage.tsx  FoldersPage.tsx  PhotosPage.tsx  SettingsPage.tsx
src/utils/: date.ts  logger.ts  memory.ts
worker/: package.json  wrangler.toml
(+49 files in other folders)
